--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "hardhat": "^2.18.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.0"
-    
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@openzeppelin/contracts": "^5.0.0",
+    "@openzeppelin/contracts-upgradeable": "^5.0.0"
   }
 }
